# fish-shell

./: CMakeLists.txt
.github/workflows/: appimage.yml
build_tools/: make_appimage.sh  make_appimage_centos7.sh
cmake/: ConfigureChecks.cmake
